# src/response/user.go
@@ -8,6 +8,6 @@ type UserResponse struct {
 	Iron      int    `json:"iron" validate:"numeric" example:"42"`                       // Short alphanumeric 6 letter code that is used for redirection
 	Copper    int    `json:"copper" validate:"numeric" example:"42"`                     // Number of times the redirection took place
 	Gold      int    `json:"gold" validate:"numeric" example:"42"`
-	Factories []Factories
+	Factories []Factory
 	Created   time.Time `json:"created" example:"2021-05-25T00:00:00.0Z" format:"date-time"` // Date the User was stored
 } // @name UserResponse
